修复input框警告

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -10,6 +10,7 @@ $lightWhite:#FFFAFA;
 $primaryColor:#009EFA;
 $dangerColor:#CD3F2C;
 $warningColor:#FFD343;
+$inputIconBgColor:#989898;
 // 圆角
 $smallBorderRadius: 2px;
 $middleBorderRadius: 4px;
