--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -220,7 +220,7 @@ $largeBorderRadius: 8px;
   }
 }
 
-.fish__loading {
+.fish__loading_animation {
   transform-origin: center center;
   animation: loading linear infinite 1s;
   height: 100%;
