--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -3,14 +3,19 @@ $smallFontSize: 12px;
 $middleFontSize: 14px;
 $normalFontSize: 16px;
 $largeFontSize: 18px;
+// 高度设置
+$smallHeight: 30px;
+$mediumHeight: 38px;
+$largeHeight: 46px;
+
 // 基本颜色
 $lightGrey: #cccccc;
 $lightBack: #333333;
-$lightWhite:#FFFAFA;
-$primaryColor:#009EFA;
-$dangerColor:#CD3F2C;
-$warningColor:#FFD343;
-$inputIconBgColor:#989898;
+$lightWhite: #FFFAFA;
+$primaryColor: #009EFA;
+$dangerColor: #CD3F2C;
+$warningColor: #FFD343;
+$inputIconBgColor: #989898;
 // 圆角
 $smallBorderRadius: 2px;
 $middleBorderRadius: 4px;
